fixed overflow of todo elements

--- a/src/css/todo.css
+++ b/src/css/todo.css
@@ -36,7 +36,6 @@
 }
 .Description {
   overflow: hidden;
-  height: 120px;
 }
 
 /* Date And Todo Buttons */
